--- a/@UST_IT.D.html
+++ b/@UST_IT.D.html
@@ -2,7 +2,7 @@
 <html lang="ar">
 <head>
 <meta charset="UTF-8">
-<title>إرسال رسالة وصورة</title>
+<title>UST_IT.D</title>
 <style>
     /* الخلفية العامة + صورة القروب */
     body {
